@@ -24,6 +24,7 @@ char* vaht_resource_name(vaht_resource* resource);
 char* vaht_resource_type(vaht_resource* resource);
 uint16_t vaht_resource_id(vaht_resource* resource);
 void vaht_resource_seek(vaht_resource* resource, uint32_t seek);
+uint32_t vaht_resource_tell(vaht_resource* resource);
 
 struct vaht_bmp_s;
 typedef struct vaht_bmp_s vaht_bmp;
@@ -43,6 +44,7 @@ vaht_mov* vaht_mov_open(vaht_resource* resource);
 void vaht_mov_close(vaht_mov* mov);
 uint32_t vaht_mov_read(vaht_mov* mov, uint32_t size, void* buffer);
 void vaht_mov_seek(vaht_mov* mov, uint32_t seek);
+uint32_t vaht_mov_tell(vaht_mov* mov);
 
 #endif // __INCLUDE_VAHT_H__
 
